apps/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: default
spec:
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: 32400
