apps/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: default
spec:
  rules:
  - host: plex.192.168.1.30.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-service
            port:
              number: 32400
  tls:
  - hosts:
    - plex.192.168.1.30.sslip.io
